DBZ-6638 Move connector specifics to connectors themselfs